** released as 1.2.5 on 2002/12/02

2002-11-25  Piotr Fusik  <fox@scene.pl>
* DOC/cart.txt: fixed a few typos

2002-11-06  Petr Stehlik  <pstehlik@sophics.cz>
* ui.c:
  - applied patch from Ed Cogburn that fixes subsequent mounting
    of R/W disks in slot that was mounted R/O previously.
  - finally implemented the R/W <-> R/O mode switching using the Space Bar.
    Please note that this R/W <-> R/O switch is just temporary and does
    not change the writeprotect flag of ATR images. Besides, it cannot
    override this flag so you actually can't mount a writeprotected ATR
    image read/write using this Space Bar toggle.

* atari.c: Ken Ames sent me a very simple patch that is supposed to allow
    compiling the Atari800 on OS/2 "using Hob X11, XFree86, or IBM's X11
    server".

2002-09-16  Piotr Fusik  <fox@scene.pl>
* cartridge.[ch], ui.c, DOC/cart.txt: five new cartridge types (Nir Dary)

2002-09-05  Piotr Fusik  <fox@scene.pl>
* cartridge.[ch], ui.c, DOC/cart.txt, DOC/README: seven new cartridge types
  (by Nir Dary)

2002-08-26  Adam Bienias
* pokeysnd.c: a fix for better quality of sound

2002-08-21  Piotr Fusik  <fox@scene.pl>
* antic.c: ANTIC mode E + GTIA mode 9 ("Unconventional 2k", "Ass Kisiel")

2002-08-15  Piotr Fusik  <fox@scene.pl>
* DOC/BUGS: "Numen" soundtrack
* cartridge.[ch], ui.c, DOC/cart.txt: 1 MB XEGS cart
* input.c: Amiga/ST mouse right button ("Bombdown")
* input.h, input.c, pia.c: MultiJoy4 interface (4 joysticks for XL/XE)

** released as 1.2.4

2002-08-07  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c:
  - added atexit(SDL_Quit) to clean up after unsuccessful initialization.
  - fixed "-help" so that it doesn't initialize graphics mode. 
  - added "-sound" and "-nosound" support so you can disable sound if
    your sound card is not plugged in :)
  - added "-dsprate" support
  - added support for the configure option --disable-SOUND
  - added Aflushlog() to Atari_Exit() thus debug info is displayed now