@@ -246,3 +246,4 @@ Friedrich Delgado Friedrichs <friedel@nomaden.org>
 
 Mark Grebe <markgrebe@yahoo.com>
 - initial Mac OSX support
+- new complete H: device support
